fix Breadcrumb y overflow

--- a/src/Components.css
+++ b/src/Components.css
@@ -1,3 +1,6 @@
+#root {
+        box-sizing: border-box;
+}
 .dark-banner {
         background: var(--dark-bg);
         color: white;
@@ -73,7 +76,8 @@ input {
         background-position: 0% 75%;
         background-repeat: no-repeat;
         background-size: 100%;
-        height: 30vh;
+        box-sizing: border-box;
+        height: 50vh;
         width: 100%;
         font-weight: bold;
         color: white;
@@ -82,9 +86,9 @@ input {
 
 .bc-title{
         font-weight: bold;
-        font-size: 3em;
+        font-size: 2.9em;
         text-transform: uppercase;
-        width: 50%;
+        width: 35%;
 }
 
 .bc-btn {
@@ -267,7 +271,7 @@ input {
 /* MOBILE */
 @media (max-width: 768px) {
         #breadcrumb {
-                
+                height: 30vh;
         }
         .bc-title {
                 font-size: 2em;
